--- a/src/WelcomePage.css
+++ b/src/WelcomePage.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.6;
+    //opacity: 0.6;
   }
   
   .content {
@@ -27,7 +27,7 @@
   button {
     font-size: 1.5em;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #000;
     color: white;
     border: none;
     cursor: pointer;
