--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -54,8 +54,9 @@ body {
   }
   
   .tourist-site-container {
-    display: flex;
-    flex-direction: column;
+    display:flex;
+    flex-wrap: wrap;
+    gap: 16px;
     margin-top: 16px;
   }
   .tourist-site-card {
