--- a/src/SignIn.css
+++ b/src/SignIn.css
@@ -3,7 +3,7 @@
 .sign-in-container {
     max-width: 400px;
     margin: 50px auto;
-    padding: 20px;
+    padding: 50px;;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #fff;
@@ -14,6 +14,8 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
+    
+  
   }
   
   .form-group {
