--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -32,7 +32,7 @@
   }
   
   button {
-    background-color: #4caf50;
+    background-color: blue;
     color: white;
     border: none;
     padding: 10px;
@@ -54,8 +54,17 @@
     align-items: center;
   }
   
-  .social-buttons span {
-    margin: 8px;
-    cursor: pointer;
+
+  .social-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
   }
   
+  .social-icon {
+    font-size: 30px; 
+    margin: 10px 0; 
+    cursor: pointer;
+  }
