--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -13,22 +13,26 @@ body {
   .top-bar {
     display: flex;
     justify-content: space-between;
-    padding: 3px;
+    padding: 10px;
     background-color: grey
   }
   
   .top-bar-left {
     display: flex;
     align-items: center;
+    margin-left: auto;
   }
   
   .top-bar h2 {
-    margin-right: 16px;
+    margin-right: 1600px;
+    font-size: 2em;
   }
   
   .icon {
-    margin-right: 16px;
+    margin-left: 10px;
     cursor: pointer;
+    justify-content: space-between;
+    
     
     
   }
