--- a/src/TouristSiteDetails.css
+++ b/src/TouristSiteDetails.css
@@ -34,9 +34,10 @@
   
   
   .image-carousel img {
-    width: 100%;
-    border-radius: 8px;
-    margin-bottom: 10px;
+    max-width: 100%;
+    max-height: 600px; /* Set a maximum height to control image dimensions */
+    border-radius: 20px;
+    margin-bottom: 600px;
   }
   
   .history-section {
